12/05/13 - fixed User edit - there was bug from 12/03/13
(honzam)
12/03/13 - generalized handling of users in different premission systems
(honzam)     - Reader slice, SQL, LDAP and its combination - users are searched
               in both systems - Reader and SQL, ... for user management
         - {substr:} now works well for UTF websites
         - {unique:<ids>} now works well also if <ids> are in JSON
         - fixed handling of corrupted items in database (duplicated values)
             - we read it as not duplicated, now
         - fixed sql_update and install under PHP 5.5
         - fixed font definition in admin-ecn.css
11/26/13 - fixed {ajax} when used with TEXTAREA - the ENTER key not do not
(honzam)   submits the input
11/19/13 - new profiler code, which measure the time spent on each of the AA
(honzam)   expression type - just add &debugtime=1 to your url (works
           in sitemodule as well as in view)
         - fixed number and date validation - the negative numbers and dates
           older than 1970 are accepted
         - improved cache for AA expressions so the pages shoud be a bit faster
         - slightly improved html code for page scroller
         - updated spanish translation
11/15/13 - multiple Checkboxes widget is much improved (it lists the selected
(honzam)   values on top an you can also uncheck it from there)
         - file upload widget used in {ajax} and {live} works better - there is
           no editable uploaded url, but there is button for delete
           of the value, ...
         - you can specify the widget_type in {live} command and redefine
           the default widget for the field
         - Text Field widget containing URL now shows the icon for jump
           to this URL
         - new f_1 alias function now could be selected in alias definition.
           It prints always the only first value of field (even if it is
           multivalue).